# app-toolkit-audit

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: apps.json
docs/: index.html
logs/: run.log.jsonl
schema/: app_record.schema.json  verification.schema.json
src/: analyze.py  browser_fetch.py  build_site.py  enrich.py  evals.py  flow.py  llms.py  models.py  site_template.html  tools.py  webcache.py
src/crews/: fix.py  judge.py  research.py  verify.py
